додедал скрейпер, но желателен рефактор методов главного класса